--- a/RentADriveMobile2/app/src/main/res/layout/activity_user_post.xml
+++ b/RentADriveMobile2/app/src/main/res/layout/activity_user_post.xml
@@ -7,9 +7,27 @@
     tools:context=".UserPostActivity">
 
     <EditText
+        android:id="@+id/posterName"
+        android:layout_width="407dp"
+        android:layout_height="50dp"
+        android:gravity="center_horizontal"
+        android:ems="10"
+        android:hint="Name"
+        android:inputType="textPersonName"
+        android:textColor="?attr/textColor"
+        android:textColorHint="?attr/metaTextColor"
+        android:textCursorDrawable="?attr/EditTextLine"
+        android:backgroundTint="?attr/EditTextLine"
+        app:layout_constraintBottom_toTopOf="@id/address"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
+
+    <EditText
         android:id="@+id/address"
         android:layout_width="407dp"
-        android:layout_height="49dp"
+        android:layout_height="50dp"
         android:gravity="center_horizontal"
         android:ems="10"
         android:hint="Address"
@@ -18,11 +36,10 @@
         android:textColorHint="?attr/metaTextColor"
         android:textCursorDrawable="?attr/EditTextLine"
         android:backgroundTint="?attr/EditTextLine"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.136" />
+        app:layout_constraintBottom_toTopOf="@id/description"
+        app:layout_constraintTop_toBottomOf="@id/posterName"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <EditText
         android:id="@+id/description"
@@ -36,11 +53,10 @@
         android:textColorHint="?attr/metaTextColor"
         android:textCursorDrawable="?attr/EditTextLine"
         android:backgroundTint="?attr/EditTextLine"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.297" />
+        app:layout_constraintTop_toBottomOf="@id/address" />
 
     <EditText
         android:id="@+id/price"
@@ -54,11 +70,10 @@
         android:textColorHint="?attr/metaTextColor"
         android:textCursorDrawable="?attr/EditTextLine"
         android:backgroundTint="?attr/EditTextLine"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/post"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.465" />
+        app:layout_constraintTop_toBottomOf="@id/description" />
 
     <Button
         android:id="@+id/post"
@@ -70,8 +85,6 @@
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.642" />
+        app:layout_constraintTop_toBottomOf="@id/price" />
 </androidx.constraintlayout.widget.ConstraintLayout>
