--- a/RentADriveMobile2/app/src/main/res/layout/activity_user_post.xml
+++ b/RentADriveMobile2/app/src/main/res/layout/activity_user_post.xml
@@ -90,6 +90,19 @@
         />
 
     <Button
+        android:id="@+id/chooseImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose Image"
+        android:background="@drawable/round_button"
+        android:backgroundTint="?attr/buttonColor"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/post"
+        app:layout_constraintTop_toBottomOf="@id/price" />
+
+    <Button
         android:id="@+id/uploadImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -98,10 +111,9 @@
         android:backgroundTint="?attr/buttonColor"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/post"
-        app:layout_constraintTop_toBottomOf="@id/price"
-        android:onClick="chooseAndUploadImage" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/post"
+        app:layout_constraintTop_toBottomOf="@id/price" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
