--- a/RentADriveMobile2/app/src/main/res/layout/fragment_home.xml
+++ b/RentADriveMobile2/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,17 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@drawable/ic_add_circle_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
- />
+        app:layout_constraintRight_toRightOf="parent" />
+
+<!--    <ImageButton-->
+<!--        android:id="@+id/currentLocationImageButton"-->
+<!--        android:layout_width="40dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_marginBottom="25dp"-->
+<!--        android:layout_marginEnd="15dp"-->
+<!--        android:contentDescription="@null"-->
+<!--        android:src="@drawable/current_location_vector_icon" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
